# trial-etl-and-api

./: .gitignore  .terraform.lock.hcl  .terraform.version  Dockerfile  README.md  api.py  commands.sh  config.toml  environment.yml  main.tf  main_flow-deployment.yaml  pyproject.toml  variables.tf
etl/: extract.py  load.py  main.py  transform.py
get_data/: grab_xlsx.py
