[tool.poetry]
name = "trial-etl-and-api"
version = "0.0.1"
description = "Trial of ETL with an API"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.3"
black = "^23.7.0"
jupyter = "^1.0.0"
pandas = "^2.0.3"
pyarrow = "^13.0.0"
loguru = "^0.7.0"
xlrd = "^2.0.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
parse = "^1.19.1"
prefect = "^2.11.5"
prefect-gcp = {extras = ["cloud-storage"], version = "^0.4.5"}
jupyterlab = "^4.0.5"
openpyxl = "^3.1.2"
toml = "^0.10.2"
python-dotenv = "^1.0.0"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
html5lib = "^1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
